// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-jsdrJD fPOPoR tab-link-fill"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-jsdrJD fPOPoR tab-link-fill"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-jsdrJD fPOPoR tab-link-fill"
>
  <span
    className="sc-gPmOhB cyGkxu"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-jsdrJD fPOPoR tab-link-fill"
>
  <div
    className="sc-jJMfTs wPuFW"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-jsdrJD fPOPoR tab-link-fill"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-jsdrJD jbnXaM tab-link-fill"
  size="small"
/>
`;
